#3223 fixed overflow

--- a/src/app/template/template-creation/template-creation.component.scss
+++ b/src/app/template/template-creation/template-creation.component.scss
@@ -5,7 +5,6 @@
 
 /deep/ .template-creation-dialog {
   width: 720px;
-  overflow: visible;
 }
 
 .flex-column {
